Place version constant into app class, add target = _blank to external link tag

--- a/public/about.html
+++ b/public/about.html
@@ -11,7 +11,7 @@
       <h1>TestGuru</h1>
       <h2>Будет много интересных тестов.</h2>
     </div>
-    <p>Учебнный проект, <a href="http://thinknetica.com/">онлайн-школа Thinknetica<a>.</p>
+    <p>Учебнный проект, <a href="http://thinknetica.com/" target="_blank">онлайн-школа Thinknetica<a>.</p>
     <p><a href="/about/author">Автор</a>.</p>
   </div>
 </body>
